--- a/.env
+++ b/.env
@@ -2,3 +2,13 @@ Cloud_name=dl5y6wx8e
 API_Key=649227917416328
 API_Secret=LQZjPqvH7mqW3FZZwwXENh2sOLI
 
+
+SECRET_KEY='c*qa3$xj2+fb$&zg=h!8r+cy(z)e&wnmy2=_x86a#)n(^h+zn('
+DEBUG=False 
+DB_NAME='tutorialdb'
+DB_USER='moringa'
+DB_PASSWORD='sam2020'
+DB_HOST='127.0.0.1'
+MODE='dev' 
+ALLOWED_HOSTS='.localhost','.herokuapp.com','.127.0.0.1'
+DISABLE_COLLECTSTATIC=1
