--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 beautifulsoup4==4.9.3
+certifi==2020.6.20
+cloudinary==1.22.0
+confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==1.11.29
 django-bootstrap4==1.0.1
+django-crispy-forms==1.8.0
+django-heroku==0.3.1
+django-registration==2.4.1
+django-tinymce==2.8.0
 gunicorn==20.0.4
+psycopg2==2.8.6
+python-decouple==3.3
 pytz==2020.1
+six==1.15.0
 soupsieve==2.0.1
+urllib3==1.25.11
+whitenoise==5.2.0
